 - Issue error by default when solvers don't converge (parameter "error_on_convergence")
 - Add option to print matrix/vector for a VariationalProblem
 - Trilinos backend now works in parallel
 - Remove Mesh refine members functions. Use free refine(...) functions instead
 - Remove AdapativeObjects
 - Add Stokes demo using the MINI element
 - Interface change: operator+ now used to denote enriched function spaces
 - Interface change: operator+ --> operator* for mixed elements
 - Add option 'allow_extrapolation' useful when interpolating to refined meshes
 - Add SpatialCoordinates demo
 - Add functionality for accessing time series sample times: vector_times(), mesh_times()
 - Add functionality for snapping mesh to curved boundaries during refinement
 - Add functionality for smoothing the boundary of a mesh
 - Speedup assembly over exterior facets by not using BoundaryMesh
 - Mesh refinement improvements, remove unecessary copying in Python interface
 - Clean PETSc and Epetra Krylov solvers
 - Add separate preconditioner classes for PETSc and Epetra solvers
 - Add function ident_zeros for inserting one on diagonal for zero rows
 - Add LU support for Trilinos interface
0.9.7 [2010-02-17]
 - Add support for specifying facet orientation in assembly over interior facets
 - Allow user to choose which LU package PETScLUSolver uses
 - Add computation of intersection between arbitrary mesh entities
 - Random access to MeshEntitiyIterators
 - Modify SWIG flags to prevent leak when using SWIG director feature
 - Fix memory leak in std::vector<Foo*> typemaps
 - Add interface for SCOTCH for parallel mesh partitioning
 - Bug fix in SubDomain::mark, fixes bug in DirichletBC based on SubDomain::inside
 - Improvements in time series class, recognizing old stored values
 - Add FacetCell class useful in algorithms iterating over boundary facets
 - Rename reconstruct --> extrapolate
 - Remove GTS dependency
0.9.6 [2010-02-03]